--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <input
                 class="btnSearch"
                 type="submit"
-                value="Find by IP"
+                value="Show my IP"
             />
         </div>
 
