--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Step-project-Ham</title>
+    <title>project-Ham</title>
     <link href="./css/normalize.css" rel="normal"/>
     <link href="./css/style.css" rel="stylesheet"/>
 </head>
